--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -8,21 +8,70 @@ on:
 
 
 jobs:
-  build:
-    name: Build
+  unit-test:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.22
+      - name: Run unit tests
+        run: go test ./... -v
       - name: send telegram message on push
         uses: appleboy/telegram-action@master
+        if: ${{ failure() }}
         with:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           format: markdown
           message: |
-            🎨 **New Backend Commit!** 
+            ⛔⛔⛔ **Backend Commit CI unit test Failed** ⛔⛔⛔
+
+            👤 **Author**: ${{ github.actor }}  
+            📝 **Commit Message**: ${{ github.event.commits[0].message }}
             
+            📦 **Repository**: [${{ github.repository }}](
+
+  docker-build-push:
+    needs: unit-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Build
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Set date
+        run: echo "DATE=$(date +%s)" >> $GITHUB_ENV
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPOSITORY }}:latest,${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPOSITORY }}:${{env.DATE}}
+      - name: send telegram message on push
+        uses: appleboy/telegram-action@master
+        if: ${{ job.status != 'success'}}
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          format: markdown
+          message: |
+            ⛔⛔⛔ **Backend Commit CI Failed** ⛔⛔⛔
+
             👤 **Author**: ${{ github.actor }}  
             📝 **Commit Message**: ${{ github.event.commits[0].message }}
             
             📦 **Repository**: [${{ github.repository }}](https://github.com/${{ github.repository }})  
             🔗 **See Changes**: [View Commit](https://github.com/${{ github.repository }}/commit/${{github.sha}})  
+            
+            ⛔ **Status**: ${{ job.status }}
